added slider carousel images with title name updated

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Fundamental</title>
+    <title>Custom carousel</title>
 </head>
 
 <body>
-
-    <h1>SHORT NOTES FOR JAVASCRIPT</h1>
+    <header>
+        <section>
+            <img src="images/1.jpg" alt="">
+        </section>
+    </header>
+    <script src="js/slider.js"></script>
 </body>
 
 </html>
